@@ -5,7 +5,6 @@
 % Copyright 2009, 2010 TeX Users Group.
 % Released under LPPL 1.3c+.
 % Please see tex4ht-cpright.tex for license text.
-\message{[<TeX4ht/dist/\jobname>]}
 
 \documentclass{article}
     \Configure{ProTex}{log,<<<>>>,title,list,`,[[]]}
@@ -21,8 +20,8 @@
 
 
 %%%%%%%%%%%%%%%%%%
-\section{Outline} 
-%%%%%%%%%%%%%%%%%%
+\section{Outline}
+%%%%%%%%%%%%%%%%%% 
 
 \AtEndDocument{\OutputCodE\<xhtmml.4xt\>}
 
