@@ -12,7 +12,6 @@
 % Copyright 2009, 2010 TeX Users Group.
 % Released under LPPL 1.3c+.
 % Please see tex4ht-cpright.tex for license text.
-\message{[<TeX4ht/dist/\jobname>]}
 
 \documentclass{article}
    \usepackage{url}
